test-cases/final-dump/resource_error2.exp
Error detected during type checking of module(s) resource_error2
[91m!ROOT!/final-dump/resource_error2.wybe:2:7: Input resource io not available at call to proc resource_error
[0m
